Details on mobile version fixed

--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -277,4 +277,8 @@
       }
     }
   }
+
+  .mask-bottom {
+    display: none;
+  }
 }
